# ComfyUI-prompt-formula

./: LICENSE  README.md  Wan2.5提示词公式.py  Wan26图生视频.py  Wan26多镜头.py  __init__.py  nodes.py  prompt_history.json  pyproject.toml  千问提示词公式.py  千问编辑.py  图转视频预设.py  工具函数.py  工具节点.py  常量配置.py  提示词预设节点.py  视频动态带运镜.py  通用提示词公式.py
Template/: 动漫风格.txt  电影风格.txt  默认.txt
js/: preset_preview.css  preset_preview.js
workflows/: ace_step_1_5音乐使用示例.json  千问单图编辑.json  千问单图编辑使用示例.json  千问提示词公式使用示例.json  图像提示词公式使用示例.json  提示词预设使用示例.json  视频提示词公式使用示例.json
提示词预设/: nanobanana分镜.txt  产品展示.txt  动漫风格.txt
提示词预设/图像提示词预设/: 图像转手办-千问版.txt  服装产品图.txt
提示词预设/视频提示词预设/: 动态图.txt
提示词预设文件夹/: 电影风格.txt  默认.txt
提示词预设文件夹/图像提示词预设/: 产品展示.txt  图像转手办-kontext版.txt
网页资源/: ACE提示词动态.js  ACE组件显隐.js  dynamic_inputs.js  imagecrop.js  resize_node.js  showcontrol_video_transition.js  wan26_multishot_showcontrol.js  wan26_showcontrol.js  图像遮罩预览可编辑.js  提示词预设.js  智能体对话预设.js
节点文件/: ACE提示词公式.py  Wan26图生视频.py  Wan26多镜头.py  千问提示词公式.py  千问编辑.py  图像遮罩预览.py  工具节点.py  提示词预设节点.py  智能体对话预设.py  智能预览节点.py  缩放图像_遮罩.py  裁剪节点.py  视频动态带运镜.py  通用提示词公式.py
