[project]
name = "ComfyUI-prompt-formula"
description = "ComfyUI-提示公式，comfyui使用的提示词便捷输入节点"
version = "1.1.3"
license = {file = "LICENSE"}
dependencies = ["torch>=2.0.0"]

[project.urls]
Repository = "https://github.com/a63976659/ComfyUI-prompt-formula"


[tool.comfy]
PublisherId = "a63976659"
DisplayName = "ComfyUI-prompt-formula"
Icon = ""
