[project]
name = "ComfyUI-prompt-formula"
description = "提示词公式节点，根据引导便捷输入提示词，无需懂得专业词汇，"
version = "251102"
license = { file = "LICENSE" }
dependencies = [
    "import folder_paths"
]
classifiers = [
    "Operating System :: OS Independent"
]

[project.urls]
Repository = "https://github.com/a63976659/ComfyUI-prompt-formula"
Documentation = "https://github.com/a63976659/ComfyUI-prompt-formula/blob/main/README.md"

[tool.comfy]
PublisherId = "a63976659"
DisplayName = "ComfyUI-prompt-formula"
Icon = ""
